@@ -1,201 +1,0 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	<title>Sudo Slider | Creative navigation 2</title>
-	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-	<link rel="STYLESHEET" type="text/css" href="../css/style.css">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-	<script type="text/javascript" src="../js/jquery.sudoSlider.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			var oldt = 0;
-		    var sudoSlider = $("#slider").sudoSlider({
-                effect: "stackDown",
-                speed: 800,
-				ajax: [
-					'../images/01.jpg',
-					'../images/02.jpg',
-					'../images/03.jpg',
-					'../images/04.jpg',
-					'../images/05.jpg'
-				],
-				prevNext:true,
-				beforeAnimation: function(t){
-					var scroll = -t+2;
-					if (scroll == 1) scroll = 0;
-					if (scroll < -2) scroll = -2;
-					var scroll = scroll * $('.custom').eq(0).outerHeight(true);
-                    var speed = 800;
-					$('#slidemenu ul').animate(
-						{ marginTop: scroll },
-						{
-							queue:false,
-							duration:speed
-						}
-					);
-					var substract = $('#slidemenu ul').offset();
-                    var position = $('#slidemenu ul li').eq(t-1).offset();
-                    var marginTop =  position.top - substract.top;
-                    $('#slidemenu ul li.currentone').animate(
-                        { marginTop: marginTop },
-						{
-							queue:false,
-							duration:speed
-						}
-					);
-		        },
-		        customLink: '.custom',
-				continuous:true,
-				preloadAjax:true
-		   });
-		});
-	</script>
-
-
-<style>
-#slider, #slider div, #slider, #slider img {width:550px;height:190px;} /* The height rule is only for IE, all other browsers does not need it! */
-
-
-
-#slidemenu {width:146px;height:190px;background:grey;float:left;overflow:hidden;}
-#slidemenu ul{margin: 0;padding: 0;list-style-type: none;font-weight: bold;}
-#slidemenu ul li{float:left;display:block;position:relative;height:63px;width:146px;background:#5DC9E1;margin-right:15px;border-bottom:1px solid white;}
-#slidemenu ul li a{z-index:40;	float: left;text-decoration: none;color: #FFF;background: transparent;position:relative;padding:17px 0 0 20px;font-size:25px;}
-#slidemenu ul li .hover{height:63px;position:absolute;width:146px;z-index:20;	background: #333;padding:0;}
-#slidemenu ul li.currentone{border:0;}
-</style>
-
-</head>
-<body>
-<div id="container">
-	<h1>Sudo Slider jQuery Plugin - Creative navigation 2</h1>
-	<a href="http://webbies.dk/SudoSlider/help/#Settings-afterAnimation">afterAnimation & beforeAnimation in docs</a>
-	<div style="position:relative;">
-		<div id="slidemenu">
-			<ul>
-				<li class="custom" data-target="1" >
-					<a href="#">Image 1</a>
-				</li>
-				<li class="custom" data-target="2" >
-					<a href="#">Image 2</a>
-				</li>
-				<li class="custom" data-target="3" >
-					<a href="#">Image 3</a>
-				</li>
-				<li class="custom" data-target="4" >
-					<a href="#">Image 4</a>
-				</li>
-				<li class="custom" data-target="5" >
-					<a href="#">Image 5</a>
-				</li>
-				<li style="position: absolute; left: 0px; " class="currentone">
-					<a class="hover" href="#"></a>
-				</li>
-			</ul>
-		</div>
-		<div id="slider"></div>
-	</div>
-	<h3>Usage</h3>
-	<h4>Include the javascripts</h4>
-	<pre>
-&lt;script type="Text/Javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"&gt;&lt;/script&gt;
-&lt;script type="text/javascript" src="../js/jquery.sudoSlider.min.js"&gt;&lt;/script&gt;</pre>
-	<h4>The Javascript to start it.</h4>
-	<pre>
-&lt;script type="text/javascript" &gt;
-   $(document).ready(function(){
-      var oldt = 0;
-      var sudoSlider = $("#slider").sudoSlider({
-         effect: "stackDown",
-         speed: 800,
-         ajax: [
-            '../images/01.jpg',
-            '../images/02.jpg',
-            '../images/03.jpg',
-            '../images/04.jpg',
-            '../images/05.jpg'
-         ],
-         prevNext:true,
-         beforeAnimation: function(t){
-            var scroll = -t+2;
-            if (scroll == 1) scroll = 0;
-            if (scroll < -2) scroll = -2;
-            var scroll = scroll * $('.custom').eq(0).outerHeight(true);
-            var speed = 800;
-            $('#slidemenu ul').animate(
-               { marginTop: scroll },
-               {
-                  queue:false,
-                  duration:speed
-               }
-            );
-            var substract = $('#slidemenu ul').offset();
-            var position = $('#slidemenu ul li').eq(t-1).offset();
-            var marginTop =  position.top - substract.top;
-            $('#slidemenu ul li.currentone').animate(
-               { marginTop: marginTop },
-               {
-                  queue:false,
-                  duration:speed
-               }
-            );
-         },
-         customLink: '.custom',
-         continuous:true,
-         preloadAjax:true
-      });
-   });
-&lt;/script&gt;</pre>
-	<h4>The CSS</h4>
-	<pre>
-#slider, #slider ul, #slider li, #slider li img {width:550px;height:190px;}
-#slider {float:left;}
-#slidemenu {width:146px;height:190px;background:grey;float:left;overflow:hidden;}
-#slidemenu ul{margin: 0;padding: 0;list-style-type: none;font-weight: bold;}
-#slidemenu ul li{float:left;display:block;position:relative;height:63px;width:146px;background:#5DC9E1;margin-right:15px;border-bottom:1px solid white;}
-#slidemenu ul li a{z-index:40;	float: left;text-decoration: none;color: #FFF;background: transparent;position:relative;padding:17px 0 0 20px;font-size:25px;}
-#slidemenu ul li .hover{height:63px;position:absolute;width:146px;z-index:20;	background: #333;padding:0;}
-#slidemenu ul li.currentone{border:0;}
-</pre>
-	<h4>The HTML</h4>
-	<pre>
-&lt;div id="slider" &gt;
-    &lt;ul&gt;
-        &lt;li&gt;&lt;img src="../images/01.jpg" alt="image description"/&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;img src="../images/02.jpg" alt="image description"/&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;img src="../images/03.jpg" alt="image description"/&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;img src="../images/04.jpg" alt="image description"/&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;img src="../images/05.jpg" alt="image description"/&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-&lt;/div&gt;</pre>
-</div>
-
-<div style="width:728px;height:90px;margin:0 auto;">
-	<script type="text/javascript">
-		<!--
-		google_ad_client = "pub-8170632875475442";
-		/* Sudo Slider, lang horisontal */
-		google_ad_slot = "0149025622";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-	</script>
-	<script type="text/javascript"
-	src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-	</script>
-</div>
-<script type="text/javascript">
-    /* Google Analytics, please remove
-     var _gaq = _gaq || [];
-     _gaq.push(['_setAccount', 'UA-20484420-1']);
-     _gaq.push(['_trackPageview']);
-
-     (function() {
-     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-     /* */
-</script>
-</body>
-</html>
