@@ -63,7 +63,6 @@
             <br><a href="demos/slide on event {ajax}.html">Slide on event {ajax}</a>
             <br><a href="demos/slide on event.html">Slide on event</a>
             <br><a href="demos/tabs.html">Tabs</a>
-            <br><a href="demos/tabs 2.html">Tabs 2</a>
             <br><a href="demos/thumbnail and captions with multiple slides.html">Thumbnail and captions with multiple slides</a>
             <br><a href="demos/thumbnails.html">Thumbnails</a>
             <br><a href="demos/thumbnails 2.html">Thumbnails 2</a>
